Kurse werden für Aktien richtig persistiert Aktien kaufen an sich geht wieder Aktien Wert wird auf dem Dashboard angezeigt